# ros_vad

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: vad.py
src/ros_vad/: buffer.py  grouper.py
